[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["docs/*", "tests/*", "assets/*", ".vscode/*"]

[workspace.dependencies]
deno_core = { version = "0.221.0", default-features = false }
tokio = { version = "1.32.0", default-features = false }

kurit-js = { path = "./crates/kurit-js" }
kurit-ops = { path = "./crates/kurit-ops" }
kurit-runtime = { path = "./crates/kurit-runtime"}
kurit-template = { path = "./crates/kurit-template"}
kurit-devserver = { path = "./crates/kurit-devserver" }

# ref: https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
