[package]
name = "kurit-js"
version = "0.1.0"
edition = "2021"
description = "Kurit.js"
license = "Apache-2.0"
repository = "https://github.com/AkiaCode/kurit/tree/main/crates/kurit-js"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
