[package]
name = "kurit-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core.workspace = true
tokio = { version = "1.32.0", default-features = false }

kurit-js.workspace = true
kurit-ops.workspace = true