[package]
name = "kurit"
version = "0.1.0"
edition = "2021"
description = "Static website generator"
license = "Apache-2.0"
repository = "https://github.com/AkiaCode/kurit/tree/main/crates/kurit"

[[bin]]
name = "kurit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#kurit-runtime.workspace = true
kurit-runtime = "0.1.0"